# first_3d_engine

./: .gitignore  CMakeLists.txt  README.md
src/Mains/: main.cpp
src/Shaders/: fragment_shader.fs  light_fragment_shader.fs  vertex_shader.vs
src/Wrappings/Buffer/: buffer.cpp  buffer.h
src/Wrappings/Camera/: camera.cpp  camera.h
src/Wrappings/Config/: config.h
src/Wrappings/InputManager/: input_manager.cpp  input_manager.h
src/Wrappings/Shader/: shader.cpp  shader.h
src/Wrappings/ShaderProgram/: shader_program.cpp  shader_program.h
src/Wrappings/Texture/: texture.cpp  texture.h
